welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:14: error: type mismatch;
 found   : Unit
 required: Int
	if (!in1020(a) && !in1020(b)){
        ^